[package] 
name = "loadbalancer"
default-run = "loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1", features = ["full"] }
clap = "3.0.0"
once_cell = "1.8.0"